--- a/chat-gpt-clone/src/components/Translation.css
+++ b/chat-gpt-clone/src/components/Translation.css
@@ -1,7 +1,12 @@
 .text-area-container{
+    margin-top: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.chat-title{
+    margin-top: 150px;
 }
 
 .text-area {
